--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About - Tianna Parris</title>
+		<title>About - Laura Achon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Data Analyst Portfolio</strong> <span>by Tianna Parris</span></a>
+						<a href="index.html" class="logo"><strong>Data Analyst Portfolio</strong> <span>by Laura Achon</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -39,7 +39,7 @@
 									<a href="r.html">R</a>
 									<a href="sql.html">SQL</a>
 									<a href="excel.html">Excel</a>
-									<a href="https://public.tableau.com/app/profile/tianna.parris" target="_blank" class="link">Tableau</a>
+									<a href="https://public.tableau.com/app/profile/l.a1767/vizzes" target="_blank" class="link">Tableau</a>
 									<a href="powerbi.html">Power BI</a>
 							</div>
 						 </div>							
@@ -67,12 +67,12 @@
 				<section id="one">
 					<div class="inner">
 						<header class="major">
-							<h1>Tianna Parris</h1>
+							<h1>Laura Achon</h1>
 						</header>
 
 						<header>
 							<h2>Overview</h2>
-							<p>I'm a Data Analyst based in Jamaica. A lot of my time is spent catering to my 2 lovely cats, visting the beach and learning new things online. My innate curiousity lead me to field of Data Analytics where I fell in love.</p>
+							<p>Data analyst with 4+ years of experience interpreting and analyzing data to drive successful business solutions. Proficient knowlegde in statistics, mathematics and analytics.</p>
 							<p>I've always been fascinated by numbers, and working in data analytics has been a long-term goal of mine. My career in the customer-facing field and analytical background in Biochemistry has taught me to think strategically about problems and identify solutions. I am on track to completing my degree in Data Science (MS. Data Science).<br>
 
 							<p>	I have developed a strong foundation in the life sciences and a passion for using data to uncover meaningful insights. I am excited to bring my technical and analytical skills to the field of data. During my studies, I honed my ability to work with complex data and developed a keen eye for identifying patterns and trends. I also gained experience in laboratory techniques, data management, and statistical analysis, which I believe will be valuable assets in my role as a Data Analyst.</p>
